# damerau-levenshtein

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README.org  THANKS  configure.ac
.github/workflows/: ci.yml
admin/: configure-to-distcheck  run-linters  signoff
admin/make-dl-test-data/: CHANGELOG.md  README.org  make-dl-test-data.cabal
admin/make-dl-test-data/app/: Main.hs
build-aux/: create_library.cmake
src/: Makefile.am  analysis.txt  bp  br.cc  br.hh  dl.cc  lw.cc  lw.hh  uk.cc  uk.hh
test/: Makefile.am  br-br  br-damerau  br-smoke  br.txt  damerau.txt  issue-2  issue-2.txt  issue-3  issue-3.txt  lw-br  lw-damerau  lw-smoke  smoke  test-data-12-8  test-data-12-8.txt  test-data-5-6  test-data-5-6.txt  timing  trivial.txt  uk-br  uk-damerau  uk-smoke
