AC_INIT([damerau–levenshtein], [0.1.0], [sp1ff@pobox.com])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_SRCDIR([src/dl.cc])
AM_INIT_AUTOMAKE([-Wall -Werror gnits std-options dist-bzip2 dist-xz])

AC_PROG_CXX
AC_C_VARARRAYS
AC_PROG_INSTALL

AC_CONFIG_HEADER([config.h])
AC_CONFIG_FILES([Makefile src/Makefile test/Makefile])
AC_OUTPUT
