cabal-version:      2.4
name:               make-dl-test-data
version:            0.0.1

-- A short (one-line) description of the package.
synopsis: Make Damerau-Levenshtein test data

-- A longer description of the package.
description: Print test data for Damerau-Levenshtein test data on stdout

-- A URL where users can report bugs.
bug-reports: https://github.com/sp1ff/damerau-levenshtein

-- The license under which the package is released.
license: GPL-3.0-or-later
author:             Michael Herstine
maintainer:         sp1ff@pobox.com

-- A copyright notice.
copyright: Copyright (C) 2024 Michael Herstine <sp1ff@pobox.com>
category: Testing
extra-source-files:
    CHANGELOG.md
    README.org

executable make-dl-test-data
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, edit-distance, random, time, vector
    hs-source-dirs:   app
    default-language: Haskell2010
